# churros

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .graphqlrc.yaml  .graphqlrc.yml  .lintstagedrc.json  .mailmap  .merge-drivers.yml  .ngrok.yaml  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  .yarnrc.yml  CD.gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  PRIVACY.md  README.md  SAST.gitlab-ci.yml  api-shell.sh  apprentis.yaml  build-and-push.sh  builddeploy.sh  commitlint.config.cjs  default.md  docker-build.sh  docker-compose.yml  entrypoint.sh  feedback.issurge  fiximports.py  is-online.sh  (+11 more)
.changeset/: afraid-hounds-sing.md  angry-peas-try.md  babel-monorepo.md  big-grapes-refuse.md  bits-ui-0.x.md  blue-ligers-juggle.md  brave-seals-sneeze.md  breezy-clouds-behave.md  breezy-fans-rule.md  bright-hairs-pay.md  bright-poems-wink.md  bright-rocks-matter.md  bright-sheep-swim.md  c8-10.x.md  calendar-link-2.x.md  calm-baboons-buy.md  carbon-charts-svelte-1.x.md  chalk-5.x.md  chatty-houses-design.md  chilled-spoons-guess.md  chilled-yaks-care.md  chilly-olives-teach.md  chokidar-4.x.md  chubby-berries-switch.md  clack-prompts-0.x.md  clever-fans-cough.md  clever-pots-drum.md  cold-brooms-pump.md  cold-nails-battle.md  cold-penguins-smile.md  concurrently-9.x.md  config.json  connect-redis-8.x.md  cool-ways-check.md  croner-8.x.md  cuddly-dryers-study.md  curly-goats-compare.md  (+320 more)
cli/: README.md  pyproject.toml
cli/churros/: cli.py
(+105 files in other folders)
