[tool.poetry]
name = "churros"
version = "0.2.0"
description = "A CLI for Churros, the student association platform"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docopt = "^0.6.2"
gql = {extras = ["all"], version = "^3.4.1"}
rich = "^13.5.3"

[tool.poetry.scripts]
churros = "churros.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
